# learning-actions

./: LICENSE  pyproject.toml
.github/workflows/: GitHub-Actions-Demo.yml  Python-Publish.yml
requirements/: all.txt  build.txt
src/: main.py
