[project]
name = "learning-actions"
version = "0.0.1"
authors = [
    { name="Example Author", email="author@example.com" },
]
description = "An example package for learning GitHub Actions"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/cnswoolley10/learning-actions"
Issues = "https://github.com/cnswoolley10/learning-actions/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"